WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
185436
Conversion misspelled "Convertion" in error message string
https://bugs.webkit.org/show_bug.cgi?id=185436
Summary
Conversion misspelled "Convertion" in error message string
Rick Waldron
Reported
2018-05-08 11:34:55 PDT
Example: Exception: TypeError: Convertion from 'BigInt' to 'number' is not allowed.
Attachments
patch
(1.60 KB, patch)
2018-05-08 11:41 PDT
,
Rick Waldron
saam
: review+
Details
Formatted Diff
Diff
patch
(3.18 KB, patch)
2018-05-09 08:09 PDT
,
Rick Waldron
msaboff
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
patch
(3.23 KB, patch)
2018-05-23 07:39 PDT
,
Rick Waldron
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Rick Waldron
Comment 1
2018-05-08 11:41:50 PDT
Created
attachment 339848
[details]
patch
Saam Barati
Comment 2
2018-05-08 11:45:15 PDT
Comment on
attachment 339848
[details]
patch r=me Can we add a test?
Rick Waldron
Comment 3
2018-05-09 08:09:47 PDT
Created
attachment 339963
[details]
patch
Michael Saboff
Comment 4
2018-05-22 12:40:36 PDT
Comment on
attachment 339963
[details]
patch r-me
Michael Saboff
Comment 5
2018-05-22 12:40:49 PDT
(In reply to Michael Saboff from
comment #4
)
> Comment on
attachment 339963
[details]
> patch > > r-me
r=me
WebKit Commit Bot
Comment 6
2018-05-22 12:41:54 PDT
Comment on
attachment 339963
[details]
patch Rejecting
attachment 339963
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'apply-attachment', '--no-update', '--non-interactive', 339963, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: FAILED at 97. 1 out of 1 hunk FAILED -- saving rejects to file JSTests/bigIntTests.yaml.rej patching file JSTests/stress/big-int-no-conversion-to-number.js patching file Source/JavaScriptCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Source/JavaScriptCore/runtime/JSBigInt.cpp Hunk #1 succeeded at 1026 (offset 325 lines). Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Michael Saboff']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output:
http://webkit-queues.webkit.org/results/7767721
Rick Waldron
Comment 7
2018-05-23 07:39:29 PDT
Created
attachment 341090
[details]
patch
Michael Saboff
Comment 8
2018-05-23 07:40:31 PDT
Comment on
attachment 341090
[details]
patch r=me
WebKit Commit Bot
Comment 9
2018-05-23 08:18:35 PDT
Comment on
attachment 341090
[details]
patch Clearing flags on attachment: 341090 Committed
r232110
: <
https://trac.webkit.org/changeset/232110
>
WebKit Commit Bot
Comment 10
2018-05-23 08:18:37 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 11
2018-05-23 08:19:21 PDT
<
rdar://problem/40485957
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug