Conversion misspelled "Convertion" in error message string https://bugs.webkit.org/show_bug.cgi?id=185436

Patch by Rick Waldron <waldron.rick@gmail.com> on 2018-05-23
JSTests:

Reviewed by Saam Barati, Michael Saboff.

* bigIntTests.yaml:

Source/JavaScriptCore:

Reviewed by Saam Barati, Michael Saboff

* runtime/JSBigInt.cpp:
(JSC::JSBigInt::toNumber const):

Canonical link: https://commits.webkit.org/201353@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232110 268f45cc-cd09-0410-ab3c-d52691b4dbfc